# TODO_TEST

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  app.py  dokcercompose.yaml  exception.py  makefile  pyproject.toml
common/: __init__.py  alembic_settings.py  app_settings.py  database_settings.py  minio_settings.py  redis_settings.py  settings.py
datebase/: __init__.py  connect.py
datebase/migrations/: env.py
datebase/minio/: minio_client.py
datebase/radis/: init.py
datebase/schemes/: base.py  bucket.py  file.py  role.py  token.py  user.py
formatter_config/: .black  .isort.conf
repository/: RepositoryModel.py  RepositoryModelServices.py  __init__.py  access_levels.py  repository.py  repository_role.py  utilities.py
repository/model/: authentication.py  bucket.py  file.py  role.py  token.py  user.py
routs/: __init__.py  file.py  identification.py  prefix.py  role.py  user.py
services/: __init__.py  services.py  user_services.py
tools/: classproperty.py  create_headers_env.py  path_file.py  test.py
