[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["triks <trik0001000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
django-environ = "^0.11.2"
pydantic-settings = "^2.2.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
sha512-crypt = "^0.1.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
